[package]
name = "slugline"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
bitcoin = { version = "0.32.6", features = ["base64", "serde"]}
bitcoincore-rpc = "0.19"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
